# chuncking-system

./: .coverage  .env.example  .gitignore  DOCLING_INTEGRATION_SUMMARY.md  Dockerfile  IMPROVEMENT_ROADMAP.md  JINA_INTEGRATION_SUMMARY.md  LLM_QUALITY_ENHANCEMENT_PLAN.md  README.md  check_hybrid_chunker.py  chunking_system_analysis.ipynb  debug_evaluate_rules.py  debug_permission.py  evaluate_rag.py  example_lightweight_health_check.py  hybrid_chunker.py  main.py  multi_format_quality_report.md  pyproject.toml  requirements.txt  requirements_temp.txt  run_phase3_tests.py  test_evaluation_fix.py  test_large_scale_metrics.py  test_metrics_performance.py  test_original_problem.py  test_pandas_fix.py  test_ragas.py  test_ragas_gemini.py  test_simple_evaluation.py  test_time_based_cleanup.py  tune_semantic_chunking.py
dashboards/: grafana-dashboard.json  prometheus-alerts.yml  prometheus.yml
docs/: Concrete Steps for Implementing Core RAG Evaluation Framework.md  DOCUMENTATION_UPDATE_SUMMARY.md  EPIC_1_ACHIEVEMENT_SUMMARY.md  STATUS_REPORT.md  architecture.md  brownfield-architecture.md  prd.md
src/: chunking_system.py  exceptions.py
tests/: conftest.py  test_chunking_system.py  test_docling_mock.py  test_docling_processor.py  test_docling_provider.py  test_enhanced_file_handler.py  test_evaluators.py  test_exceptions.py  test_file_handler.py  test_health_endpoints.py  test_hybrid_chunker.py  test_integration.py  test_jina_integration.py  test_llm_factory.py  test_llm_integration.py  test_llm_providers.py  test_llm_quality_enhancement.py  test_logger.py  test_markdown_processor.py  test_metadata_enricher.py  test_metrics_functionality.py  test_multi_format_quality_evaluator.py  test_path_utils.py  test_phase3_cache.py  test_phase3_integration.py  test_phase3_monitoring.py  (+11 more)
(+142 files in other folders)
